# wjp-analyzer

./: .coverage  .dockerignore  .find_line.py  .gitignore  .pytest_healthcheck.py  AI_PROJECT_DOCUMENTATION.md  AI_TRAINING_DATA.md  ALL_TODOS_COMPLETE.md  API_DOCUMENTATION.md  CHANGELOG.md  CI_CD_STATUS.md  CLEANUP_REPORT.md  COMMIT_SUMMARY.md  COMPLETE_SECTION_VERIFICATION.md  COMPLETE_STATUS.md  CONSOLIDATION_COMPLETE.md  CRITICAL_FIXES_COMPLETED.md  DIRECTORY_VERIFICATION_AND_INTEGRATION_STATUS.md  DXF_EDITOR_ANALYSIS_INTEGRATION_PLAN.md  DXF_EDITOR_ENHANCEMENT_PLAN.md  DXF_EDITOR_IMPLEMENTATION_SUMMARY.md  Dockerfile  FEEDBACK_SUMMARY.md  FINAL_INTEGRATION_SUCCESS.md  FINAL_PROJECT_STRUCTURE.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  JOB_QUEUE_IMPLEMENTATION.md  LICENSE  NEXT_STEPS.md  PHASE1_COMPLETE.md  PHASE1_PROGRESS.md  PHASE1_TEST_COVERAGE_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  PHASE2_SUMMARY.md  PHASE2_TEST_COVERAGE_COMPLETE.md  PHASE3_COMPLETE.md  (+50 more)
.cursor/: commands.json  mcp.json
.github/: copilot-instructions.md
backup_before_cleanup/: README.md  pyproject.toml  requirements.txt
cli/: wjdx.py
config/: .env.template  app_config.yaml
docs/: CODECOV_SETUP.md  MONITOR_CI_CD.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md
elk/: docker-compose.yml
examples/: basic_conversion_example.py  image_analyzer_integration.py
jaeger/: docker-compose.yml
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
migrations/: env.py
out_image/: lengths.csv  report.json  sample_image_converted.dxf
prometheus/: prometheus.yml
reports/: perf_summary.md
samples/: medallion_sample.dxf  sample_from_image.dxf
scripts/: celery_worker.py  make_sample_dxf.py
src/: dxf_cost_estimator.py
static/: styles.css
templates/: base.html  index.html  object_selection.html  (+1 more)
(+433 files in other folders)
